--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Assignment 4 - Home</title>
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -36,15 +37,15 @@
 		including:</p>
 	<ul>
 		<li>time management and strong organisational skills</li>
-		<li>high-level customer service and friendly relationship management</li>
+		<li> High-level customer service and friendly relationship management</li>
 		<li>cash handling and sales ability</li>
 		<li>motivation and dedication</li>
 	</ul>
-	<p>As a Sales Assistant at a busy shoe store, I hav ebeen able to buid up a strong foundation of customer service
+	<p>As a Sales Assistant at a busy shoe store, I have been able to build up a strong foundation of customer service
 		skills. Though I have really enjoyed this role. I am looking for a new challenge in my career. The Sales
-		Assistant role with ABC Clothing Ltd would offer me a chance to grow and further develop my retail career.</p>
+		An assistant role with ABC Clothing Ltd would offer me a chance to grow and further develop my retail career.</p>
 	<p>I would enjoy having the opportunity to talk with you more about this position, and how I could use my skills to
-		benefit your oraganisation at an interview.</p>
+		benefit your organization at an interview.</p>
 	<p>Thank you for considering my application. I look forward to hearing from you.</p>
 	<br>
 	<p>Yours sincerely</p>
